// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en gifExpertApp.js Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="cowboy bebop"
      key="cowboy bebop"
    />
    <GifGrid
      category="evangelion"
      key="evangelion"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en gifExpertApp.js Debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
